Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.2.0.2204
----------
** Use the notes.html file instead of this file for change notes?

2.2.0.2203
----------
- Updated all built-in styles to add enclosure field.
- Improved toolbar styles.
- Added Ukrainian localisation. (Thanks to Andrew Kachalo).
- Fixed toolbar UI corruption bug.
- Updated keyboard shortcuts in help file.
- Added Get Info and Style toolbar buttons.

2.2.0.2202
----------
- Fix bug in 2201 which broke saving a new smart folder.
- Fix CGContext errors in the system console log caused by the Vienna tab control gradient background.
- Add Growl events for file download success and failure.
- Add filter bar to more easily filter the article list.
- Add global search bar.

2.2.0.2201
----------
- UI improvements contributed by Philipp Antoni.
- Switched to polished metal style.
- Added Russian localization. (Thanks to Taras "sacrat" Brizitsky).
- Show refresh indicator in folder list next to feed currently being refreshed.
- Add unsubscribe/resubscribe command to File menu.
- Show enclosure pane below article for articles that contain enclosures.

2.2.0.2200
----------
- Added ability to drop OPML files onto Vienna's dock icon.
- Added support for RSS/Atom enclosures.
- Add conditional support in templates.
- Overhauled UI.
- Added new standard style.
- Added more built-in styles.
- Command + T now opens new tab.
- Accept web pages as subscription URLs and parse to extract the feed.
- Show RSS button in browser if the web page links to an RSS feed. Clicking the button subscribes to that feed.
- New tab bar control. (Thanks to Evan Schoenberg).
- Add option to add Vienna to the system status bar.
- Added Basque localization. (Thanks to Aitor Zubizarreta).